--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@ h1, h2 {
         @keyframes blink {
             50% { border-color: transparent; }
         }
-        /* Responsivity */
+         /* Responsivity */
         @media (max-width: 1024px) {
-            /* Adjust navbar for tablets */
             .navbar {
                 padding: 20px;
                 justify-content: space-evenly;
@@ -247,7 +246,6 @@ h1, h2 {
                 font-size: 1.1em;
             }
 
-            /* Adjust hero section for smaller screens */
             .hero {
                 flex-direction: column;
                 padding: 40px 20px;
@@ -263,7 +261,6 @@ h1, h2 {
                 font-size: 1.1em;
             }
 
-            /* Adjust section padding */
             .section {
                 padding: 60px 20px;
             }
@@ -293,24 +290,16 @@ h1, h2 {
                 margin-bottom: 20px;
             }
 
-            /* Text and image size adjustments */
             .hero .text {
                 font-size: 1.1em;
                 text-align: center;
             }
 
-            /* Section padding adjustments */
             .section {
                 padding: 60px 20px;
             }
 
-            /* Services list adjustments */
-            .full-section ul {
-                max-width: 100%;
-                padding-left: 0;
-            }
-
-            /* Adjust font size in social links */
+            /* Socials font size adjustments */
             .socials a {
                 font-size: 1em;
                 padding: 8px 15px;
@@ -323,17 +312,14 @@ h1, h2 {
         }
 
         @media (max-width: 480px) {
-            /* Hero image size */
             .hero .image img {
                 max-width: 90%;
             }
 
-            /* Text adjustments */
             .hero .text {
                 font-size: 1em;
             }
 
-            /* Reduce font size further for very small screens */
             .full-section ul {
                 font-size: 1em;
                 padding-left: 10px;
@@ -341,6 +327,45 @@ h1, h2 {
 
             .socials a {
                 font-size: 0.9em;
+            }
+
+            /* Mobile hamburger menu */
+            .menu-toggle {
+                display: flex;
+            }
+
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                width: 100%;
+                background: rgba(0, 0, 0, 0.8);
+                position: absolute;
+                top: 60px;
+                left: 0;
+                padding: 20px;
+                text-align: center;
+                z-index: 999;
+            }
+            .nav-links a {
+                margin: 10px 0;
+                font-size: 1.2em;
+            }
+
+            .navbar.active .nav-links {
+                display: flex;
+            }
+            .navbar.active .menu-toggle span:nth-child(1) {
+                transform: rotate(45deg);
+                position: relative;
+                top: 6px;
+            }
+            .navbar.active .menu-toggle span:nth-child(2) {
+                opacity: 0;
+            }
+            .navbar.active .menu-toggle span:nth-child(3) {
+                transform: rotate(-45deg);
+                position: relative;
+                top: -6px;
             }
         }
     </style>
@@ -448,7 +473,22 @@ document.addEventListener("DOMContentLoaded", function() {
         }, typingDuration);
     });
 });
+ document.addEventListener("DOMContentLoaded", function() {
+            const sections = document.querySelectorAll(".section");
+            const observer = new IntersectionObserver(entries => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add("show");
+                    }
+                });
+            }, { threshold: 0.1 });
+            sections.forEach(section => observer.observe(section));
+        });
 
+        function toggleMenu() {
+            const navbar = document.querySelector('.navbar');
+            navbar.classList.toggle('active');
+        }
     </script>
 </body>
 </html>
