--- a/index.html
+++ b/index.html
@@ -156,126 +156,62 @@
       animation: typing 6s steps(40, end) forwards;
     }
 
-    /* Media Queries */
-    @media (max-width: 1024px) {
-      .navbar {
-        padding: 1.5rem;
-        justify-content: space-evenly;
-      }
-      .navbar a {
-        margin: 0.5rem;
-        font-size: 1em;
-      }
-      .hero {
-        padding: 5vw 3vw;
-      }
-      .hero .image img {
-        max-width: 100%;
-        margin-bottom: 1.25rem;
-      }
-      .hero .text {
-        text-align: center;
-        font-size: 1.1em;
+     @media (max-width: 480px) {
+      header {
+        padding: 10px;
       }
       .section {
-        padding: 5vw 3vw;
+        font-size: 28px;
       }
-    }
-
-    @media (max-width: 768px) {
-      .navbar {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 1.25rem;
+      .content-text {
+        font-size: 16px;
       }
-      .navbar a {
-        margin: 0.5rem 0;
+      .social-buttons a {
+        font-size: 1.8rem;
       }
-      .hero {
-        flex-direction: column;
-        padding: 5vw 3vw;
+      footer {
+        padding: 15px;
+        font-size: 14px;
       }
-      .hero .image img {
-        max-width: 100%;
-        margin-bottom: 1.25rem;
+      nav ul li {
+        font-size: 16px;
       }
-      .hero .text {
-        font-size: 1.1em;
-        text-align: center;
-      }
-      .section {
-        padding: 5vw 3vw;
-      }
-      .socials a {
-        font-size: 1em;
-        padding: 0.5rem 1rem;
-      }
-      h1, h2 {
-        margin-bottom: 0.625rem;
-      }
-    }
-
-    @media (max-width: 600px) {
-      .hero {
-        flex-direction: column;
-      }
-      .hero .text {
-        text-align: center;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .hero .image img {
-        max-width: 90%;
-      }
-      .hero .text {
-        font-size: 1em;
-      }
-      .full-section ul {
-        font-size: 1em;
-        padding-left: 0.625rem;
-      }
-      .socials a {
-        font-size: 0.9em;
-      }
-      /* Esempio per un eventuale menu hamburger */
       .menu-toggle {
-        display: flex;
+        font-size: 1.8rem;
       }
-      .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        background: rgba(0, 0, 0, 0.8);
-        position: absolute;
-        top: 60px;
-        left: 0;
-        padding: 1.25rem;
-        text-align: center;
-        z-index: 999;
-      }
-      .nav-links a {
-        margin: 0.625rem 0;
-        font-size: 1.2em;
-      }
-      .navbar.active .nav-links {
-        display: flex;
-      }
-      .navbar.active .menu-toggle span:nth-child(1) {
-        transform: rotate(45deg);
-        position: relative;
-        top: 0.375rem;
-      }
-      .navbar.active .menu-toggle span:nth-child(2) {
-        opacity: 0;
-      }
-      .navbar.active .menu-toggle span:nth-child(3) {
-        transform: rotate(-45deg);
-        position: relative;
-        top: -0.375rem;
+      table th, table td {
+        font-size: 12px;
       }
     }
+    @media (max-width: 768px) {
+      table {
+        width: 100%;
+        overflow-x: auto;
+        display: block;
+        -webkit-overflow-scrolling: touch;
+      }
+      th, td {
+        padding: 10px;
+        text-align: left;
+      }
+      table th, table td {
+        font-size: 14px;
+      }
+    }
+    @media (max-width: 480px) {
+      table th, table td {
+        font-size: 12px;
+      }
+    }
+@media (max-width: 768px) {
+  .banner {
+    height: 200px; /* Puoi ridurre l'altezza per una migliore adattabilità */
+  }
+  .banner img {
+    object-fit: contain; /* Mantiene l'immagine visibile senza tagliarla */
+  }
+}
+
   </style>
 </head>
 <body>
